src/pages/ru/v1.12.0/deployment/upgrade.mdx
---
Название: "Обновление деплоя"
MetaTitle: "Обновление деплоя"
MetaDescription: "Как обновить ваш экземпляр до последней версии OpenReplay."
---

Обновление вашего развертывания OpenReplay до последней версии требует обновления как вашего бэкэнда (экземпляра), так и трекера.

## Обновление бэкэнда

1. Скачайте последний CLI


```bash
# Download the latest CLI
sudo wget https://raw.githubusercontent.com/openreplay/openreplay/main/scripts/helmcharts/openreplay-cli -O /bin/openreplay 
sudo chmod +x /bin/openreplay
export PATH=/var/lib/openreplay:$PATH
```


2. Проверьте версию вашего кластера Kubernetes и обновите его, если она старше, чем `1.25` (**обязательно**):


```bash
# Check Kubernetes version
kubectl version --short 2>/dev/null | grep -i server | awk '{print $NF}'
```



```bash
# Update Kubernetes
k3s-killall.sh
curl -sL https://get.k3s.io | sudo K3S_KUBECONFIG_MODE="644" INSTALL_K3S_VERSION='v1.25.6+k3s1' INSTALL_K3S_EXEC="--disable=traefik" sh -
	
# Restart Kubernetes cluster
sudo systemctl restart k3s.service

# Update Kubernetes deprecated apis
helm plugin install https://github.com/helm/helm-mapkubeapis
helm mapkubeapis -n app openreplay
```


3. Обновите OpenReplay:


```bash
RELEASE_UPGRADE=1 openreplay --upgrade
```

